[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redguard"
dynamic = ["version"]
description = "Distributed synchronization primitives buit on top of Redis"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = [
    "redis",
    "mutex",
    "semaphore",
    "lock",
    "distributed",
    "synchronization",
    "rate",
    "limiter",
]
authors = [{ name = "RaRhAeu", email = "rarha_eu@protonmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["redis"]

[project.urls]
Documentation = "https://github.com/asynq-io/redguard#readme"
Issues = "https://github.com/asynq-io/redguard/issues"
Source = "https://github.com/asynq-io/redguard"

[tool.hatch.version]
path = "redguard/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pyyaml",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-sugar",
    "pytest-repeat",
    "ruff",
    "mypy>=1.0.0",
    "bandit",
    "types-redis",
    "testcontainers[redis]",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
check = [
    "ruff check ./redguard",
    "ruff format --check ./redguard",
    "mypy --install-types --non-interactive {args:redguard tests}",
    "bandit -r ./redguard",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=./redguard --count=3"
testpaths = ["./tests"]

[tool.coverage.run]
source_pkgs = ["redguard", "tests"]
branch = true
parallel = true
omit = ["redguard/__about__.py"]

[tool.coverage.paths]
package = ["redguard"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pyright]
venvPath = ".venv"
venv = "redguard"

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[tool.ruff]
target-version = "py39"

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "E501", # line too long
]

[tool.bandit]
skips = ['B101']
